crates/agglayer-grpc-types/src/compat/v1/snapshots/agglayer_grpc_types__compat__v1__tests__bad_data_in_nested__debug.snap
---
source: crates/agglayer-grpc-types/src/compat/v1/tests.rs
expression: "format!(\"{:?}\", eyre::Error::from(error))"
---
data.value: invalid value

Location:
    crates/agglayer-grpc-types/src/compat/v1/tests.rs:21:25
